# vegetable-funeral

./: Cargo.toml  LICENSE  README.md
assets/: beet.glb  carrot.glb  launcher.glb  pumpkinBasic.glb
src/: main.rs
