[package]
edition = "2021"
name = "vegetable_funeral"
version = "0.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bevy_editor_pls = "0.2.0"
rand = "0.8.5"
